:lipstick: fix: better status icon alignment

--- a/src/styles/lists.styl
+++ b/src/styles/lists.styl
@@ -73,7 +73,7 @@ $item-margin = .8em
         font-size       14px
         font-weight     700
         text-transform  uppercase
-        padding         .5rem
+        padding         .25rem .75rem
         width           auto
         overflow        hidden
         margin          0
@@ -86,7 +86,7 @@ $item-margin = .8em
         position absolute
         width    24px
         height   24px
-        bottom   1em
+        bottom   1.25rem
         right    1em
     .item-add-service-button
         font-size 16px
@@ -122,6 +122,9 @@ $item-margin = .8em
             margin      .5em
             font-size   1rem
             font-weight normal
+
+        .item-status-icon
+            bottom   .5rem
 
 @media (min-width: 43em)
     .use-case-dialog
